# nova-parser

./: .gitignore  .mcp.json  CLAUDE.md  README.md  mise.toml  pyproject.toml  ruff-check.skill
.claude/: settings.json  settings.local.json
.claude/agents/: codex-code-reviewer.md  codex-implement-and-review.md  codex-python-implementer.md  commit-detailed.md  python-architect.md  python-implementer.md  python-requirements.md  python-reviewer.md  python-test-author.md
.claude/plans/: eager-wobbling-parasol.md  quizzical-hatching-diffie.md
.devcontainer/: devcontainer.json  herdr.toml  install_beforehand.bash  prepare.bash  starship.toml  test-herdr-migration.bash  tmux-copy-url.zsh  tmux-git-prompt.bash  tmux-git-segment.bash  tmux-git-status.bash  tmux-url-copy.zsh  tmux.conf  zshrc.txt
Output/: NAN_067.md
docs/: agent-teams.md  custom-extractor-setup.md  documentai-expected-output.md  documentai-trpg-card-strategy.md  feature-dev-install-recovery.md  feature-dev.md  mcp-servers.md  regional-ocr.md  semistructure.md  spec-kit-guide-detailed.md  spec-kit-guide.md  spec-kit-implementation.md  spec-kit-onboarding.md  usage.md
prompt/: GameDataDefinition.xml  Use_Document_AI.xml  output_tsv.xml
scripts/: capture_horizontal_layout_fixtures.py  capture_layout_fixtures.py
tests/: conftest.py  semistructure_factories.py  test_claude_handoff.py  test_crop.py  test_documentai.py  test_exit_plan_codex_review.py  test_gamedata.py  test_gemini_backend.py  test_json_guardrails.py  test_main.py  test_models.py  test_ocr.py  test_perf.py  test_prompts.py  test_regional_app_js.py  test_regional_blocks.py  test_regional_crop.py  test_regional_e2e.py  test_regional_errors.py  test_regional_images.py  test_regional_layout.py  test_regional_layout_fixtures.py  test_regional_layout_golden.py  test_regional_layout_horizontal.py  test_regional_layout_horizontal_fixtures.py  test_regional_layout_horizontal_golden.py  test_regional_main.py  test_regional_markdown.py  test_regional_models.py  test_regional_ocr_client.py  test_regional_routes.py  test_regional_sessions.py  test_regional_state.py  test_semistructure_evaluate.py  test_semistructure_input.py  test_semistructure_llm.py  test_semistructure_main.py  test_semistructure_models.py  test_semistructure_normalize.py  test_semistructure_pipeline.py  (+6 more)
(+152 files in other folders)
