[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-parser"
version = "0.1.0"
description = "書籍からゲームデータを Gemini で抽出する"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai",
    "python-dotenv",
    "pydantic",
    "pydantic-ai",
    "google-cloud-documentai>=3.10.0",
    "pypdf>=6.8.0",
    "pillow>=10.0.0",
    "google-cloud-vision>=3.14.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
nova-parser = "nova_parser.main:main"
nova-parser-regional = "nova_parser.regional_ocr.main:main"
nova-parser-claude-handoff = "nova_parser.claude_handoff:main"
nova-parser-semistructure = "nova_parser.semistructure.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "taskipy",
]


[tool.ruff]
target-version = "py314"
exclude = [
    ".venv",
    ".ruff_cache"
]
line-length = 119

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]

# 自動フォーマット設定
[tool.ruff.format]
#quote-style = "double"
#indent-style = "space"
#skip-magic-trailing-comma = false
line-ending = "auto"

[tool.taskipy.tasks]
ruff = "uvx ruff check --fix --unsafe-fixes src/ tests/ && uvx ruff format src/ tests/"
